      just the given files.
    * maven_jars now has two new arguments, `combine` which combines its transitive deps
      into a single uberjar and `hash` which sets the hash for that uberjar.
      The intention here is to make it more lightweight to set a hash for a single target
      rather than having to provide potentially many individual hashes.


Version 1.7.0
-------------

    * Reworking of error handling in parsing code. Previous code used to panic back through
      the parser which deeply upset PyPy (often we got away with it because we'd die before
      anything else could go wrong, but not always). Now errors are returned to Python and
      reraised as exceptions there - which implies that it's possible for BUILD code to
      catch and handle such exceptions, although I don't recommend writing them that way :)
    * Optimised glob() a bit so it doesn't descend into directories that will never match
      the given pattern.
    * Fixed compilation of clang tests with python3
    * Officially ban subincluding of local targets (didn't actually work before anyway)
    * `plz clean` now cleans sub-targets as well
    * Banned double slashes in build labels which was being incorrectly let though, leading
      to some very strange failures.
    * Ensure paths are relative in hash memoisation - improves hit rate by about 30% and
      is a performance improvement (although probably not very noticeable in most cases).
	* `plz cover` now has a `--line_coverage_report` / `-l` flag to produce line-by-line
      coverage output for its affected files.


Version 1.6.7
-------------

    * Fix for go_src part of proto_library; don't think we exercise that internally
      anywhere any more, but it is now a bit less broken than before.


Version 1.6.6
-------------

    * Fix to flaky tests; don't count as failures once success has been reached.


Version 1.6.5
-------------
